@@ -1,4 +1,4 @@
-DIST ahcpd-0.5.tar.gz 34302 RMD160 667280860ba56e90ca0780ff44f0f774590631dd SHA1 fda7c6151e4ebf11949250ef555becd9387a5ca7 SHA256 cd4a632fb548aa3224cf441260bfe13440cad2ccb15e2dc425b513505946b8e5
-EBUILD ahcpd-0.5.ebuild 575 RMD160 f37e1bec7bc91ce9715b9f098bd37a6895a70330 SHA1 30d43c7a8bbc66eba150d77e603d31898cdde8a4 SHA256 fdef8d22a08922dbe79b5a0e70fc856f1c56210e785efc2ca4775098fd47b23a
-MISC ChangeLog 459 RMD160 4ba8aae03b35dae7a678bda69988af3bf0f1c5c0 SHA1 bb4b636e841ec379d5e1c30d88e748a714d38f39 SHA256 135c390470d977f9a9ab23eee5a7e779c723f4c0a6e27d726faa4b707d8296db
+DIST ahcpd-0.51.tar.gz 29523 RMD160 8fcaaf5a7b5be315c3eb71d520b340eabb699fbe SHA1 cb2490317f8a1c7e0c59c614eeb3a81104791f16 SHA256 2b43927fe2dbe978b0cb21770845608ab612602187e642cb421e8d01249fba30
+EBUILD ahcpd-0.51.ebuild 553 RMD160 3765e8c579e9908f133fbf5c5d57542a4b95a808 SHA1 01315c412972a1370992dc15fb1b643da88937d6 SHA256 5f8d274123be0970f85ba1c3d8c3b251bee77147bd6ed1254504e620595b2056
+MISC ChangeLog 631 RMD160 4ff020ca353bfe4a64b8396b0c55f84c437dea90 SHA1 b54524877a3de089b2cb404c7ebc49840dc0a701 SHA256 2e22ad9b2baff31719bf01c9a38458cbb251c2da950e4e6ca93e502f9872aab3
 MISC metadata.xml 245 RMD160 4b6d28ac6d11318e46608b660faa66831e687abd SHA1 121cfd33e7fd68c5698748ef5d191a4c25ab00ce SHA256 bb00019a125967806b1ac6fdb192689e4d1ff8215f6749b7bef027d19f94428d
