@@ -1,6 +1,12 @@
 # ChangeLog for net-misc/ahcpd
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+*ahcpd-0.51 (07 Jul 2010)
+
+  07 Jul 2010; Michał Górny (sedzimir) <mgorny.3ehbo@mailnull.com>
+  -ahcpd-0.5.ebuild, +ahcpd-0.51.ebuild:
+  Version bump, cleanup. Pass CC.
 
   29 Mar 2009; Bignaux Ronan <ronan@aimao.org> ahcpd-0.5.ebuild:
   remove useless MANDIR and INFODIR parameters for emake install
